--- a/child.css
+++ b/child.css
@@ -75,7 +75,7 @@ form {
     /* margin: auto;  */
 }
 
-input, textarea, button { 
+input, textarea, button, select { 
     width: 100%; 
     margin: 10px 0; 
     padding: 20px; 
@@ -90,6 +90,11 @@ button {
 }
 button:hover{
     background-color: orangered;
+}
+
+#status{
+    color: white;
+    font-size: 20px;
 }
 
 
