indexhtml not showing

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@
 body, html{
     scroll-behavior: smooth;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    height: 100%;
 }
 
 .home{
@@ -50,13 +49,15 @@ body, html{
     color: white;
     text-shadow: 2px 2px 2px black;
     background-color: gray;
-    opacity: 0.9;
+    /* opacity: 0.9; */
 }
 .text h1{
     font-size:45px;
+    /* z-index: 10; */
 }
 .text h2{
     font-size: 35px;
+    /* z-index: 10; */
 }
 
 .btn-cover{
@@ -86,7 +87,7 @@ body, html{
 }
 /* &&&&&&&&&&&&&&&&&&&&&&&&&&& */
 .dev{
-    margin-top: 2000px;
+    /* margin-top: 20px; */
     position: fixed;
     right: 20px;
     bottom: 20px;
