--- a/style.css
+++ b/style.css
@@ -87,7 +87,7 @@ body, html{
 }
 /* &&&&&&&&&&&&&&&&&&&&&&&&&&& */
 .dev{
-    /* margin-top: 20px; */
+    margin-top: 20px;
     position: fixed;
     right: 20px;
     bottom: 20px;
@@ -144,7 +144,7 @@ body, html{
     .text{
     display: flex;
     width: 100%;
-    height: 100%;
+    height: 50%;
     align-items: center;
     justify-content: center;
     }
@@ -172,7 +172,6 @@ body, html{
     position: relative;
     right: 0;
     bottom: 0;
-    /* top: 0; */
     left: 0;
     width:100%;
     height: auto;
